refactor the code according to the result of findbugs.